--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=Vlada_lab03
+application.title=Vlada_lab
 application.vendor=Twistzz
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -25,15 +25,13 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Vlada_lab03.jar
+dist.jar=${dist.dir}/Vlada_lab.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.Vlada_lab02.jar=C:\\Users\\Twistzz\\Documents\\NetBeansProjects\\Vlada_lab02\\dist\\Vlada_lab02.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.Vlada_lab02.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -58,7 +56,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=vlada_lab03.Main
+main.class=vlada_lab04.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
